--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "image_diversity"
-version = "0.0.1"
+version = "0.1.0"
 authors = [
   { name="Francisco Ibarrola", email="francisco.ibarrola@outlook.com"},
 ]
@@ -12,13 +12,13 @@ description = "A package for computing entropy-based diversity measures on image
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-  "torch",
+  "torch>=1.7.1",
+  "torchvision",
   "ftfy",
   "regex",
   "tqdm",
-  "scikit-image",
+  "scipy",
   "clip@git+https://github.com/openai/CLIP.git",
-  "scikit-image"
 ]
 
 
