--- a/black.toml
+++ b/black.toml
@@ -1,4 +1,4 @@
 [tool.black]
 skip-string-normalization = true
 target-version = ['py38']
-exclude = '/build|/dist|/venv'
+exclude = '/build|/dist|/venv|/clip'
